# gossip

./: README.md
client/: go.mod  main.go
client/proto/: chat.pb.go  chat.proto
connector/: .gitignore  BUILD  MODULE.bazel  go.mod  main.go
connector/bazel-connector/proto/: BUILD
connector/handler/: BUILD  ping.go
connector/proto/: BUILD  chat.proto
connector/server/: BUILD  broadcaster.go  connection.go  server.go  write_worker.go
room/: BUILD  Dockerfile  MODULE.bazel  main.kt
